--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,7 +39,7 @@
 			<span>Get to the core of what you do</span>
 		</div>
 
-		<section>
+		<!-- <section>
 			<h1>Kjerner is like really awesome</h1>
 			<p>
 				Have a look at your current business and see how you would make the digital transformation.
@@ -72,7 +72,7 @@
 				Have a look at your current business and see how you would make the digital transformation.
 				Without buggy custom software, fragile excel sheets, error prone manual data entry or expensive, inflexible legacy software. Just everything you need, when you need it. Nothing more, nothing less.
 			</p>
-		</section>
+		</section> -->
 
 
 		<div class="progress-strip animel">
