Changed process to 'Solutions' page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,7 +75,7 @@
 		</section> -->
 
 
-		<div class="progress-strip animel">
+<!-- 		<div class="progress-strip animel">
 			<a name="prototyping"></a>
 			<ul>
 				<li style="z-index: 5;" class="active"><a href="#prototyping">Prototyping</a></li>
@@ -153,7 +153,7 @@
 				<p><img src="assets/snapshot.jpg">Get together with us on a regular basis and take a snapshot of your current needs and how well they match with a picture of the systems you have running.</p>
 				<p>When the pictures do not correspond, let us fix it with precision and speed, without lead time, risks nor high costs.</p>
 			</section>
-		</div>
+		</div> -->
 
 		<h2 class="centered">Customers we helped make the digital transformation</h2>
 		<ul class="logos">
