--- a/_layouts/solutions.html
+++ b/_layouts/solutions.html
@@ -3,6 +3,10 @@
 	{% include head.html %}
 	<body>
 
+		<article>
+			<h1>{{ page.title }}</h1>
+			<section>{{ content }}</section>
+		</article>
 
 		<div class="progress-strip animel">
 			<a name="prototyping"></a>
@@ -15,7 +19,7 @@
 			</ul>
 			<section>
 				<h3>Prototyping</h3>
-				<p><img src="assets/prototyping.jpg">A prototyping session can take up from a few hours to a full day, depending on the complexity of your domain.</p>
+				<p><img src="../assets/prototyping.jpg">A prototyping session can take up from a few hours to a full day, depending on the complexity of your domain.</p>
 				<p>During the prototyping session you will see the core of your business process clearly, in a working prototype, multiple times during the session. By the end of the session you will know what is possible and be eager to finish what we started. We will plan a design session as soon as possible.</p>
 			</section>
 		</div>
@@ -31,7 +35,7 @@
 			</ul>
 			<section>
 				<h3>Design Session</h3>
-				<p><img src="assets/design-session.jpg">During the design session of a week we will get to the parts we had to skip during the prototyping session.</p>
+				<p><img src="../assets/design-session.jpg">During the design session of a week we will get to the parts we had to skip during the prototyping session.</p>
 				<p>We will focus on getting all relevant parts in your Kjerner system and making sure we solve the problems you would like to see solved. Domain experts will need to be available for a few sessions during the week and available for questions most of the time. After a week, we will have valuable software that fits your needs perfectly, ready for deployment in the cloud or on-premise. If you need more, we can schedule a new design session right away - this will only happen for more complex domains.</p>
 			</section>
 		</div>
@@ -47,7 +51,7 @@
 			</ul>
 			<section>
 				<h3>Integrations</h3>
-				<p><img src="assets/integrations.jpg">Connections to your running sofware you want to keep and migrations from the legacy systems you would like to stop using are a common need. We are experienced in rapidly creating a connection to legacy software. Think days or weeks, depending on the complexity.</p>
+				<p><img src="../assets/integrations.jpg">Connections to your running sofware you want to keep and migrations from the legacy systems you would like to stop using are a common need. We are experienced in rapidly creating a connection to legacy software. Think days or weeks, depending on the complexity.</p>
 				<p>We can plan one or more sessions right after or in parallel to the first design session to have them at go live, or plan to do them later on as well. Your Kjerner system stays flexible and can be changed and extended at any time.</p>
 			</section>
 		</div>
@@ -63,7 +67,7 @@
 			</ul>
 			<section>
 				<h3>Up&Running</h3>
-				<p><img src="assets/running.jpg">When you are satisfied with the results and want to start using your new software, you can go right ahead.</p>
+				<p><img src="../assets/running.jpg">When you are satisfied with the results and want to start using your new software, you can go right ahead.</p>
 				<p>You can provide your own on-premise virtual server for us to use or have us start a cloud service for you. You will pay a monthly or yearly fee to cover license, maintenance and hosting costs. Multiple plans available.</p>
 			</section>
 		</div>
@@ -79,15 +83,10 @@
 			</ul>
 			<section>
 				<h3>Snapshots</h3>
-				<p><img src="assets/snapshot.jpg">Get together with us on a regular basis and take a snapshot of your current needs and how well they match with a picture of the systems you have running.</p>
+				<p><img src="../assets/snapshot.jpg">Get together with us on a regular basis and take a snapshot of your current needs and how well they match with a picture of the systems you have running.</p>
 				<p>When the pictures do not correspond, let us fix it with precision and speed, without lead time, risks nor high costs.</p>
 			</section>
 		</div>
-		<article>
-			<h1>{{ page.title }}</h1>
-			<section>{{ content }}</section>
-		</article>
-
 
 		{% include footer.html %}
 		{% include header.html %}
