--- a/_layouts/solutions.html
+++ b/_layouts/solutions.html
@@ -12,31 +12,31 @@
 			<a name="prototyping"></a>
 			<ul>
 				<li style="z-index: 5;" class="active"><a href="#prototyping">Prototyping</a></li>
-				<li style="z-index: 4;"><a href="#design-session">Design Session</a></li>
+				<li style="z-index: 4;"><a href="#design-sprint">Design Sprint</a></li>
 				<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
 				<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
 				<li style="z-index: 1;"><a href="#snapshots">Snapshots</a></li>
 			</ul>
 			<section>
 				<h3>Prototyping</h3>
-				<p><img src="../assets/prototyping.jpg">A prototyping session can take up from a few hours to a full day, depending on the complexity of your domain.</p>
-				<p>During the prototyping session you will see the core of your business process clearly, in a working prototype, multiple times during the session. By the end of the session you will know what is possible and be eager to finish what we started. We will plan a design session as soon as possible.</p>
+				<p><img src="../assets/prototyping.jpg">A free prototyping session can take up from a few hours to a full day, depending on the complexity of your domain.</p>
+				<p>During the prototyping session we will get to the core of your business process and model the needs and requirements in an Alan model in parallel. We will let you know which parts can supported by standard packages and where they need extension or replacement. If you have software you would like to keep using, we will propose to create an integration with it. By the end of the prototyping session you will know what is possible and you will be eager to finish what we started. We will plan a design sprint as soon as possible.</p>
 			</section>
 		</div>
 
 		<div class="progress-strip blue animel">
-			<a name="design-session"></a>
+			<a name="design-sprint"></a>
 			<ul>
 				<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
-				<li style="z-index: 4;" class="active"><a href="#design-session">Design Session</a></li>
+				<li style="z-index: 4;" class="active"><a href="#design-sprint">Design Sprint</a></li>
 				<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
 				<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
 				<li style="z-index: 1;"><a href="#snapshots">Snapshots</a></li>
 			</ul>
 			<section>
-				<h3>Design Session</h3>
-				<p><img src="../assets/design-session.jpg">During the design session of a week we will get to the parts we had to skip during the prototyping session.</p>
-				<p>We will focus on getting all relevant parts in your Kjerner system and making sure we solve the problems you would like to see solved. Domain experts will need to be available for a few sessions during the week and available for questions most of the time. After a week, we will have valuable software that fits your needs perfectly, ready for deployment in the cloud or on-premise. If you need more, we can schedule a new design session right away - this will only happen for more complex domains.</p>
+				<h3>Design Sprint</h3>
+				<p><img src="../assets/design-session.jpg">At the end of a design sprint of two weeks, you will get a working system, according to your specifications. Together, we make sure the system fits your needs and delivers value to you</p>
+				<p>During a specification meeting, we will focus on getting a combination of valuable parts added to your Kjerner system and making sure we will be able to solve the problems you would like to see solved. Domain experts will need to be available during the specification meeting and available for questions during the sprint. At the end of the sprint, we will have valuable software that fits your needs perfectly, ready for deployment in the cloud or on-premise. If you need more, we can schedule a new design sprint right away - this will only happen for more complex domains.</p>
 			</section>
 		</div>
 
@@ -44,7 +44,7 @@
 			<a name="integrations"></a>
 			<ul>
 				<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
-				<li style="z-index: 4;"><a href="#design-session">Design Session</a></li>
+				<li style="z-index: 4;"><a href="#design-sprint">Design Sprint</a></li>
 				<li style="z-index: 3;" class="active"><a href="#integrations">Integrations</a></li>
 				<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
 				<li style="z-index: 1;"><a href="#snapshots">Snapshots</a></li>
@@ -52,7 +52,7 @@
 			<section>
 				<h3>Integrations</h3>
 				<p><img src="../assets/integrations.jpg">Connections to your running sofware you want to keep and migrations from the legacy systems you would like to stop using are a common need. We are experienced in rapidly creating a connection to legacy software. Think days or weeks, depending on the complexity.</p>
-				<p>We can plan one or more sessions right after or in parallel to the first design session to have them at go live, or plan to do them later on as well. Your Kjerner system stays flexible and can be changed and extended at any time.</p>
+				<p>We can plan one or more integration sprints right after or in parallel to the first design sprint to have them at go live, or plan to do them later on as well. Your Kjerner system stays flexible and can be changed and extended at any time.</p>
 			</section>
 		</div>
 
@@ -60,7 +60,7 @@
 			<a name="up-running"></a>
 			<ul>
 				<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
-				<li style="z-index: 4;"><a href="#design-session">Design Session</a></li>
+				<li style="z-index: 4;"><a href="#design-session">Design Sprint</a></li>
 				<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
 				<li style="z-index: 2;" class="active"><a href="#up-running">Up&Running</a></li>
 				<li style="z-index: 1;"><a href="#snapshots">Snapshots</a></li>
@@ -76,7 +76,7 @@
 			<a name="snapshots"></a>
 			<ul>
 				<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
-				<li style="z-index: 4;"><a href="#design-session">Design Session</a></li>
+				<li style="z-index: 4;"><a href="#design-session">Design Sprint</a></li>
 				<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
 				<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
 				<li style="z-index: 1;" class="active"><a href="#snapshots">Snapshots</a></li>
