Beter lopende tekst.

--- a/_layouts/solutions.html
+++ b/_layouts/solutions.html
@@ -51,8 +51,8 @@
 			</ul>
 			<section>
 				<h3>Integrations</h3>
-				<p><img src="../assets/integrations.jpg">Connections to your running sofware you want to keep and migrations from the legacy systems you would like to stop using are a common need. We are experienced in rapidly creating a connection to legacy software. Think days or weeks, depending on the complexity.</p>
-				<p>We can plan one or more integration sprints right after or in parallel to the first design sprint to have them at go live, or plan to do them later on as well. Your Kjerner system stays flexible and can be changed and extended at any time.</p>
+				<p><img src="../assets/integrations.jpg">Next thing you need is a connection to your existing systems or a data migration from you old system. We are experienced in rapidly creating a connection to legacy software as well as most standard ERPs. Think days or weeks, depending on the complexity.</p>
+				<p>We can plan one or more integration sprints before, after or during any design sprint. Your Kjerner system stays flexible and can be changed and extended at any time.</p>
 			</section>
 		</div>
 
@@ -68,7 +68,7 @@
 			<section>
 				<h3>Up&Running</h3>
 				<p><img src="../assets/running.jpg">When you are satisfied with the results and want to start using your new software, you can go right ahead.</p>
-				<p>You can provide your own on-premise virtual server for us to use or have us start a cloud service for you. You will pay a monthly or yearly fee to cover license, maintenance and hosting costs. Multiple plans available.</p>
+				<p>You can provide your own on-premise virtual server for us to use or have us start a cloud service for you. You will pay a monthly or yearly fee to cover license, maintenance and hosting costs. Multiple plans are available.</p>
 			</section>
 		</div>
 
