--- a/_layouts/solutions.html
+++ b/_layouts/solutions.html
@@ -82,9 +82,9 @@
 				<li style="z-index: 1;" class="active"><a href="#snapshots">Snapshots</a></li>
 			</ul>
 			<section>
-				<h3>Snapshots</h3>
-				<p><img src="../assets/snapshot.jpg">Get together with us on a regular basis and take a snapshot of your current needs and how well they match with a picture of the systems you have running.</p>
-				<p>When the pictures do not correspond, let us fix it with precision and speed, without lead time, risks nor high costs.</p>
+				<h3>Commitment</h3>
+				<p><img src="../assets/snapshot.jpg">On a regular basis we will have visits with you to see how we can better support your organisation and to stay up-to-date.</p>
+				<p>We are committed to keep our customers our best advocates and make smaller and larger improvements to your systems at equally affordable rates as the initial solution.</p>
 			</section>
 		</div>
 
