--- a/_layouts/solutions.html
+++ b/_layouts/solutions.html
@@ -15,7 +15,7 @@
 				<li style="z-index: 4;"><a href="#design-sprint">Design Sprint</a></li>
 				<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
 				<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
-				<li style="z-index: 1;"><a href="#snapshots">Snapshots</a></li>
+				<li style="z-index: 1;"><a href="#commitment">Commitment</a></li>
 			</ul>
 			<section>
 				<h3>Prototyping</h3>
@@ -31,7 +31,7 @@
 				<li style="z-index: 4;" class="active"><a href="#design-sprint">Design Sprint</a></li>
 				<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
 				<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
-				<li style="z-index: 1;"><a href="#snapshots">Snapshots</a></li>
+				<li style="z-index: 1;"><a href="#commitment">Commitment</a></li>
 			</ul>
 			<section>
 				<h3>Design Sprint</h3>
@@ -47,7 +47,7 @@
 				<li style="z-index: 4;"><a href="#design-sprint">Design Sprint</a></li>
 				<li style="z-index: 3;" class="active"><a href="#integrations">Integrations</a></li>
 				<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
-				<li style="z-index: 1;"><a href="#snapshots">Snapshots</a></li>
+				<li style="z-index: 1;"><a href="#commitment">Commitment</a></li>
 			</ul>
 			<section>
 				<h3>Integrations</h3>
@@ -63,7 +63,7 @@
 				<li style="z-index: 4;"><a href="#design-session">Design Sprint</a></li>
 				<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
 				<li style="z-index: 2;" class="active"><a href="#up-running">Up&Running</a></li>
-				<li style="z-index: 1;"><a href="#snapshots">Snapshots</a></li>
+				<li style="z-index: 1;"><a href="#commitment">Commitment</a></li>
 			</ul>
 			<section>
 				<h3>Up&Running</h3>
@@ -73,17 +73,17 @@
 		</div>
 
 		<div class="progress-strip animel">
-			<a name="snapshots"></a>
+			<a name="commitment"></a>
 			<ul>
 				<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
 				<li style="z-index: 4;"><a href="#design-session">Design Sprint</a></li>
 				<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
 				<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
-				<li style="z-index: 1;" class="active"><a href="#snapshots">Snapshots</a></li>
+				<li style="z-index: 1;" class="active"><a href="#commitment">Commitment</a></li>
 			</ul>
 			<section>
 				<h3>Commitment</h3>
-				<p><img src="../assets/snapshot.jpg">On a regular basis we will have visits with you to see how we can better support your organisation and to stay up-to-date.</p>
+				<p><img src="../assets/snapshot.jpg">On a regular basis we will visit you to see how we can better support your organisation and let you stay up-to-date. We will take a snapshot of your current needs and one of the systems you have running, see how well they still match and suggest changes to close any gaps.</p>
 				<p>We are committed to keep our customers our best advocates and make smaller and larger improvements to your systems at equally affordable rates as the initial solution.</p>
 			</section>
 		</div>
