--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
-	<h3>Let us show you what we can do in just a few hours</h3>
+	<h3>Let us show you what we can do<br> in just a few hours</h3>
 	<p>
 		Please contact us for a prototyping session.<br>
-		Send us an email at <a href="mailto:info@kjerner.com">info@kjerner.com</a> or use the chatbox.
+		Email us at <a href="mailto:info@kjerner.com">info@kjerner.com</a> or use the chatbox.
 	</p>
 </footer>
