--- a/_layouts/solutions.html
+++ b/_layouts/solutions.html
@@ -83,7 +83,7 @@
 			</ul>
 			<section>
 				<h3>Commitment</h3>
-				<p><img src="../assets/snapshot.jpg">On a regular basis we will visit you to see how we can better support your organisation and let you stay up-to-date. We will take a snapshot of your current needs and one of the systems you have running, see how well they still match and suggest changes to close any gaps.</p>
+				<p><img src="../assets/snapshot.jpg">There are plans available in which you will be able to have changes made with a short lead time. On a regular basis we will visit you to see how we can better support your organisation and let you stay up-to-date. We will take a snapshot of your current needs and one of the systems you have running, see how well they still match and suggest changes to close any gaps.</p>
 				<p>We are committed to keep our customers our best advocates and make smaller and larger improvements to your systems at equally affordable rates as the initial solution.</p>
 			</section>
 		</div>
