--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,8 @@
 	<h3>Let us show you what we can do<br> in just a few hours</h3>
 	<p>
 		Please contact us for a prototyping session.<br>
-		Email us at <a href="mailto:info@kjerner.com">info@kjerner.com</a> or use the chatbox.
+		Email us at <a href="mailto:info@kjerner.com">info@kjerner.com</a> or use the chatbox.<br>
+		<br>
+		We have an office in the Radex Innovation Center. Click <a href="http://www.radex.nl/contact/routebeschrijving/">here</a> for a navigation address
 	</p>
 </footer>
