--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
 		Please contact us for a prototyping session.<br>
 		Email us at <a href="mailto:info@kjerner.com">info@kjerner.com</a> or use the chatbox.<br>
 		<br>
-		We have an office in the Radex Innovation Center. Click <a href="http://www.radex.nl/contact/routebeschrijving/">here</a> for a navigation address
+		We have an office in the Radex Innovation Center.<br>
+		Click <a href="http://www.radex.nl/contact/routebeschrijving/">here</a> for a navigation route.
 	</p>
 </footer>
