--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -160,6 +160,7 @@
 			<li><img src="assets/logos/sapa.png" alt="SAPA"></li>
 			<li><img src="assets/logos/hydro.png" alt="Hydro"></li>
 			<li><img src="assets/logos/axa.png" alt="Axa"></li>
+			<li><img src="assets/logos/Logo_Apenheul.png" alt="Apenheul"></li>
 			<li><img src="assets/logos/allegion.png" alt="Allegion"></li>
 			<li><img src="assets/logos/tata.png" alt="Tata"></li>
 		</ul>
