--- a/_sass/showcases.scss
+++ b/_sass/showcases.scss
@@ -1,4 +1,11 @@
 .showcases {
+	p:first-child {
+		text-align: center;
+		max-width: 600px;
+		margin-bottom: 2em*$ratio*$ratio;
+		margin-left: auto;
+		margin-right: auto;
+	}
 	h1 {
 		text-align: center;
 		margin-top: 1em*$ratio*$ratio;
