better products overview and separate pages

--- a/src/main.scss
+++ b/src/main.scss
@@ -200,6 +200,7 @@ hr {
 @import "banners";
 @import "progress-strip";
 @import "blog";
+@import "products";
 @import "quotes";
 @import "slideshow";
 @import "showcases";
