--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,3 @@
-<script src="{{ 'src/main.js' | relative_url }}" type="text/javascript"></script>
-<script src="{{ 'src/swiper.min.js' | relative_url }}" type="text/javascript"></script>
+<script src="{{ 'src/main.js' | relative_url }}?{{ site.time | date: "%s"}}" type="text/javascript"></script>
+<script src="{{ 'src/swiper.min.js' | relative_url }}?{{ site.time | date: "%s"}}" type="text/javascript"></script>
 <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="a6a9b140-dfef-40d1-99ea-bda72f711853";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
