--- a/_includes/products.html
+++ b/_includes/products.html
@@ -1,7 +1,7 @@
 <ul class="products">
 	<li>
 		<a href="erp-next.html">
-			<img src="/assets/products/erpnext.svg" alt="ERP Next Logo" width="256" height="256">
+			<img src="{{ 'assets/products/erpnext.svg' | relative_url }}" alt="ERP Next Logo" width="256" height="256">
 		</a>
 		<p>
 			A fully capable ERP system that scales along with you
@@ -12,7 +12,7 @@
 	</li>
 	<li>
 		<a href="visual-factory.html">
-			<img src="/assets/products/vf.svg" alt="Visual Factory Logo" width="256" height="256">
+			<img src="{{ 'assets/products/vf.svg' | relative_url }}" alt="Visual Factory Logo" width="256" height="256">
 		</a>
 		<p>
 			A tailor made MES for production shop floors
