--- a/_sass/quotes.scss
+++ b/_sass/quotes.scss
@@ -1,61 +1,61 @@
 blockquote {
-	float: right;
-	position: relative;
-	margin: 0 0 1rem $ratio*1rem;
-	color: #fff;
-	font-weight: bold;
-	font-size: $ratio*1rem;
-	line-height: $tight;
-	background: url('../assets/photo1-blue.jpg') center/cover no-repeat;
-	padding: $ratio*$ratio*1rem;
-	padding-bottom: calc(#{round($ratio*$ratio)*1rem} + 48px);
-	width: 40%;
+    width: 40%;
+    position: relative;
+    float: right;
+    margin: 0 0 1rem $ratio*1rem;
+    padding: $ratio*$ratio*1rem;
+    padding-bottom: calc(#{round($ratio*$ratio)*1rem} + 48px);
+    font-weight: bold;
+    font-size: $ratio*1rem;
+    line-height: $tight;
+    background: url('../assets/photo1-blue.jpg') center/cover no-repeat;
+    color: #fff;
 
-	article > & {
-		max-width: 30rem;
-		float: none;
-		margin: $ratio*$ratio*1rem auto;
-	}
+    transition: all .3s ease-out;
 
-	span {
-		text-align: right;
-		display: block;
-		margin-top: 1rem;
-		font-style: italic;
-		font-weight: normal;
-	}
-	&::after {
-		content: "";
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		height: 48px;
-		background: url('../assets/balloon-pointer.svg') left bottom no-repeat;
-		background-size: 1600px 48px;
-	}
+    article > & {
+        max-width: 30rem;
+        float: none;
+        margin: $ratio*$ratio*1rem auto;
+    }
 
-	transition: all .3s ease-out;
-	&:not(.top-in-view) {
-		opacity: 0;
-		transform: scale(.2) rotate(-15deg);
-	}
-	&.top-in-view {
-		opacity: .5;
-		transform: scale(.6) rotate(0deg);
-	}
-	&.bottom-in-view {
-		opacity: 1;
-		transform: scale(1) rotate(0deg);
-	}
+    span {
+        display: block;
+        margin-top: 1rem;
+        font-weight: normal;
+        font-style: italic;
+        text-align: right;
+    }
+    &::after {
+        content: '';
+        height: 48px;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: url('../assets/balloon-pointer.svg') left bottom no-repeat;
+        background-size: 1600px 48px;
+    }
+    &:not(.top-in-view) {
+        transform: scale(.2) rotate(-15deg);
+        opacity: 0;
+    }
+    &.top-in-view {
+        transform: scale(.6) rotate(0deg);
+        opacity: .5;
+    }
+    &.bottom-in-view {
+        transform: scale(1) rotate(0deg);
+        opacity: 1;
+    }
 
-	@media screen and (max-width: $breakpoint) {
-		&,
-		article > & {
-			float: none;
-			margin: 1rem*$ratio auto;
-			width: 80%;
-			max-width: 80%;
-		}
-	}
+    @media screen and (max-width: $breakpoint) {
+        &,
+        article > & {
+            width: 80%;
+            max-width: 80%;
+            float: none;
+            margin: 1rem*$ratio auto;
+        }
+    }
 }
