--- a/_sass/slideshow.scss
+++ b/_sass/slideshow.scss
@@ -1,55 +1,55 @@
 .swiper-container {
-	width: 100%;
-	height: 60vh;
-	background: $orange;
+    width: 100%;
+    height: 60vh;
+    background: $orange;
 
 
-	.swiper-slide {
-		text-align: center;
-	}
-	.slide-image {
-		display: inline-block;
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
-		height: 100%;
-		width: 100%;
-		max-width: $breakpoint;
-	}
-	.swiper-pagination-bullet-active {
-		background-color: #fff;
-	}
-	.swiper-button-prev,
-	.swiper-button-next {
-		background: none;
-		&::after {
-			content: "";
-			position: absolute;
-			border: 1rem solid transparent;
-			border-left-color: $blue;
-			top: 50%;
-			width: 0;
-			height: 0;
-			right: 0;
-			margin-top: -1rem;
-			transition: border-color .6s ease-in-out;
-		}
-		&:hover::after,
-		&:focus::after,
-		&:active::after {
-			border-left-color: white;
-		}
-	}
-	.swiper-button-prev {
-		&::after {
-			border-left-color: transparent;
-			border-right-color: $blue;
-		}
-		&:hover::after,
-		&:focus::after,
-		&:active::after {
-			border-left-color: transparent;
-			border-right-color: white;
-		}
-	}
+    .swiper-slide {
+        text-align: center;
+    }
+    .slide-image {
+        display: inline-block;
+        width: 100%;
+        max-width: $breakpoint;
+        height: 100%;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+    .swiper-pagination-bullet-active {
+        background-color: #fff;
+    }
+    .swiper-button-prev,
+    .swiper-button-next {
+        background: none;
+        &::after {
+            content: '';
+            width: 0;
+            height: 0;
+            position: absolute;
+            top: 50%;
+            right: 0;
+            margin-top: -1rem;
+            border: 1rem solid transparent;
+            transition: border-color .6s ease-in-out;
+            border-left-color: $blue;
+        }
+        &:hover::after,
+        &:focus::after,
+        &:active::after {
+            border-left-color: white;
+        }
+    }
+    .swiper-button-prev {
+        &::after {
+            border-left-color: transparent;
+            border-right-color: $blue;
+        }
+        &:hover::after,
+        &:focus::after,
+        &:active::after {
+            border-left-color: transparent;
+            border-right-color: white;
+        }
+    }
 }
