add some icons for erp-next

--- a/src/main.scss
+++ b/src/main.scss
@@ -199,6 +199,7 @@ hr {
 @import "headers";
 @import "banners";
 @import "progress-strip";
+@import "product-icons";
 @import "blog";
 @import "products";
 @import "quotes";
