main content should be in main element

--- a/_layouts/blogpage.html
+++ b/_layouts/blogpage.html
@@ -13,7 +13,7 @@
 	<body>
 
 
-		<article>
+		<main>
 			<h1>{{ page.title }}</h1>
 			<dl class="blog-meta">
 				<dt class="date">Date</dt>
@@ -42,7 +42,7 @@
 			</dl>
 
 			{{ page.content }}
-		</article>
+		</main>
 
 		<aside>
 			<h2>More articles</h2>
