--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -62,10 +62,10 @@
 		</div>
 
 
-		<article>
+		<main>
 		<h2 class="centered">Cases And Presentations</h2>
 		{% include bloglist.html %}
-		</article>
+		</main>
 
 
 
