--- a/_layouts/showcases.html
+++ b/_layouts/showcases.html
@@ -3,10 +3,10 @@
 	{% include head.html %}
 	<body>
 
-		<article>
+		<main>
 			<h1>{{ page.title }}</h1>
 			<section>{{ content }}</section>
-		</article>
+		</main>
 
 		{% include footer.html %}
 		{% include header.html %}
