--- a/_sass/showcases.scss
+++ b/_sass/showcases.scss
@@ -14,7 +14,7 @@
         margin: -2em*$ratio*$ratio 0 0 0;
         padding: 0 0 2em*$ratio*$ratio 0;
         font-size: 1em*$ratio*$ratio;
-        color: white;
+        color: #fff;
         text-align: center;
         text-align: center;
         @media screen and (max-width: $breakpoint - 1) {
@@ -23,7 +23,7 @@
         }
     }
 
-    article > :not(div) {
+    main > :not(div) {
         width: 1200px;
     }
 
