new heroes and logos for product pages

--- a/_layouts/solutions.html
+++ b/_layouts/solutions.html
@@ -3,90 +3,92 @@
 	{% include head.html %}
 	<body>
 
-		<article>
-			<h1>{{ page.title }}</h1>
-			<section>{{ content }}</section>
-		</article>
+		<main>
+			<article>
+				<h1>{{ page.title }}</h1>
+				<section>{{ content }}</section>
+			</article>
 
-		<div class="progress-strip animel">
-			<a name="prototyping"></a>
-			<ul>
-				<li style="z-index: 5;" class="active"><a href="#prototyping">Prototyping</a></li>
-				<li style="z-index: 4;"><a href="#design-sprint">Design Sprint</a></li>
-				<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
-				<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
-				<li style="z-index: 1;"><a href="#commitment">Commitment</a></li>
-			</ul>
-			<section>
-				<h3>Prototyping</h3>
-				<p><img src="../assets/prototyping.jpg">A free prototyping session can take up from a few hours to a full day, depending on the complexity of your domain.</p>
-				<p>During the prototyping session we will get to the core of your business process and model the needs and requirements in an Alan model in parallel. We will let you know which parts can supported by standard packages and where they need extension or replacement. If you have software you would like to keep using, we will propose to create an integration with it. By the end of the prototyping session you will know what is possible and you will be eager to finish what we started. We will plan a design sprint as soon as possible.</p>
-			</section>
-		</div>
+			<div class="progress-strip animel">
+				<a name="prototyping"></a>
+				<ul>
+					<li style="z-index: 5;" class="active"><a href="#prototyping">Prototyping</a></li>
+					<li style="z-index: 4;"><a href="#design-sprint">Design Sprint</a></li>
+					<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
+					<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
+					<li style="z-index: 1;"><a href="#commitment">Commitment</a></li>
+				</ul>
+				<section>
+					<h3>Prototyping</h3>
+					<p><img src="../assets/prototyping.jpg">A free prototyping session can take up from a few hours to a full day, depending on the complexity of your domain.</p>
+					<p>During the prototyping session we will get to the core of your business process and model the needs and requirements in an Alan model in parallel. We will let you know which parts can supported by standard packages and where they need extension or replacement. If you have software you would like to keep using, we will propose to create an integration with it. By the end of the prototyping session you will know what is possible and you will be eager to finish what we started. We will plan a design sprint as soon as possible.</p>
+				</section>
+			</div>
 
-		<div class="progress-strip blue animel">
-			<a name="design-sprint"></a>
-			<ul>
-				<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
-				<li style="z-index: 4;" class="active"><a href="#design-sprint">Design Sprint</a></li>
-				<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
-				<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
-				<li style="z-index: 1;"><a href="#commitment">Commitment</a></li>
-			</ul>
-			<section>
-				<h3>Design Sprint</h3>
-				<p><img src="../assets/design-session.jpg">At the end of a design sprint of two weeks, you will get a working system, according to your specifications. Together, we make sure the system fits your needs and delivers value to you</p>
-				<p>During a specification meeting, we will focus on getting a combination of valuable parts added to your Kjerner system and making sure we will be able to solve the problems you would like to see solved. Domain experts will need to be available during the specification meeting and available for questions during the sprint. At the end of the sprint, we will have valuable software that fits your needs perfectly, ready for deployment in the cloud or on-premise. If you need more, we can schedule a new design sprint right away - this will only happen for more complex domains.</p>
-			</section>
-		</div>
+			<div class="progress-strip blue animel">
+				<a name="design-sprint"></a>
+				<ul>
+					<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
+					<li style="z-index: 4;" class="active"><a href="#design-sprint">Design Sprint</a></li>
+					<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
+					<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
+					<li style="z-index: 1;"><a href="#commitment">Commitment</a></li>
+				</ul>
+				<section>
+					<h3>Design Sprint</h3>
+					<p><img src="../assets/design-session.jpg">At the end of a design sprint of two weeks, you will get a working system, according to your specifications. Together, we make sure the system fits your needs and delivers value to you</p>
+					<p>During a specification meeting, we will focus on getting a combination of valuable parts added to your Kjerner system and making sure we will be able to solve the problems you would like to see solved. Domain experts will need to be available during the specification meeting and available for questions during the sprint. At the end of the sprint, we will have valuable software that fits your needs perfectly, ready for deployment in the cloud or on-premise. If you need more, we can schedule a new design sprint right away - this will only happen for more complex domains.</p>
+				</section>
+			</div>
 
-		<div class="progress-strip animel">
-			<a name="integrations"></a>
-			<ul>
-				<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
-				<li style="z-index: 4;"><a href="#design-sprint">Design Sprint</a></li>
-				<li style="z-index: 3;" class="active"><a href="#integrations">Integrations</a></li>
-				<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
-				<li style="z-index: 1;"><a href="#commitment">Commitment</a></li>
-			</ul>
-			<section>
-				<h3>Integrations</h3>
-				<p><img src="../assets/integrations.jpg">Next thing you need is a connection to your existing systems or a data migration from you old system. We are experienced in rapidly creating a connection to legacy software as well as most standard ERPs. Think days or weeks, depending on the complexity.</p>
-				<p>We can plan one or more integration sprints before, after or during any design sprint. Your Kjerner system stays flexible and can be changed and extended at any time.</p>
-			</section>
-		</div>
+			<div class="progress-strip animel">
+				<a name="integrations"></a>
+				<ul>
+					<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
+					<li style="z-index: 4;"><a href="#design-sprint">Design Sprint</a></li>
+					<li style="z-index: 3;" class="active"><a href="#integrations">Integrations</a></li>
+					<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
+					<li style="z-index: 1;"><a href="#commitment">Commitment</a></li>
+				</ul>
+				<section>
+					<h3>Integrations</h3>
+					<p><img src="../assets/integrations.jpg">Next thing you need is a connection to your existing systems or a data migration from you old system. We are experienced in rapidly creating a connection to legacy software as well as most standard ERPs. Think days or weeks, depending on the complexity.</p>
+					<p>We can plan one or more integration sprints before, after or during any design sprint. Your Kjerner system stays flexible and can be changed and extended at any time.</p>
+				</section>
+			</div>
 
-		<div class="progress-strip blue animel">
-			<a name="up-running"></a>
-			<ul>
-				<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
-				<li style="z-index: 4;"><a href="#design-session">Design Sprint</a></li>
-				<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
-				<li style="z-index: 2;" class="active"><a href="#up-running">Up&Running</a></li>
-				<li style="z-index: 1;"><a href="#commitment">Commitment</a></li>
-			</ul>
-			<section>
-				<h3>Up&Running</h3>
-				<p><img src="../assets/running.jpg">When you are satisfied with the results and want to start using your new software, you can go right ahead.</p>
-				<p>You can provide your own on-premise virtual server for us to use or have us start a cloud service for you. You will pay a monthly or yearly fee to cover license, maintenance and hosting costs. Multiple plans are available.</p>
-			</section>
-		</div>
+			<div class="progress-strip blue animel">
+				<a name="up-running"></a>
+				<ul>
+					<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
+					<li style="z-index: 4;"><a href="#design-session">Design Sprint</a></li>
+					<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
+					<li style="z-index: 2;" class="active"><a href="#up-running">Up&Running</a></li>
+					<li style="z-index: 1;"><a href="#commitment">Commitment</a></li>
+				</ul>
+				<section>
+					<h3>Up&Running</h3>
+					<p><img src="../assets/running.jpg">When you are satisfied with the results and want to start using your new software, you can go right ahead.</p>
+					<p>You can provide your own on-premise virtual server for us to use or have us start a cloud service for you. You will pay a monthly or yearly fee to cover license, maintenance and hosting costs. Multiple plans are available.</p>
+				</section>
+			</div>
 
-		<div class="progress-strip animel">
-			<a name="commitment"></a>
-			<ul>
-				<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
-				<li style="z-index: 4;"><a href="#design-session">Design Sprint</a></li>
-				<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
-				<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
-				<li style="z-index: 1;" class="active"><a href="#commitment">Commitment</a></li>
-			</ul>
-			<section>
-				<h3>Commitment</h3>
-				<p><img src="../assets/snapshot.jpg">There are plans available in which you will be able to have changes made with a short lead time. On a regular basis we will visit you to see how we can better support your organisation and let you stay up-to-date. We will take a snapshot of your current needs and one of the systems you have running, see how well they still match and suggest changes to close any gaps.</p>
-				<p>We are committed to keep our customers our best advocates and make smaller and larger improvements to your systems at equally affordable rates as the initial solution.</p>
-			</section>
-		</div>
+			<div class="progress-strip animel">
+				<a name="commitment"></a>
+				<ul>
+					<li style="z-index: 5;"><a href="#prototyping">Prototyping</a></li>
+					<li style="z-index: 4;"><a href="#design-session">Design Sprint</a></li>
+					<li style="z-index: 3;"><a href="#integrations">Integrations</a></li>
+					<li style="z-index: 2;"><a href="#up-running">Up&Running</a></li>
+					<li style="z-index: 1;" class="active"><a href="#commitment">Commitment</a></li>
+				</ul>
+				<section>
+					<h3>Commitment</h3>
+					<p><img src="../assets/snapshot.jpg">There are plans available in which you will be able to have changes made with a short lead time. On a regular basis we will visit you to see how we can better support your organisation and let you stay up-to-date. We will take a snapshot of your current needs and one of the systems you have running, see how well they still match and suggest changes to close any gaps.</p>
+					<p>We are committed to keep our customers our best advocates and make smaller and larger improvements to your systems at equally affordable rates as the initial solution.</p>
+				</section>
+			</div>
+		</main>
 
 		{% include footer.html %}
 		{% include header.html %}
