--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,10 +3,20 @@
 	{% include head.html %}
 	<body>
 
-		<article>
-			<h1>{{ page.title }}</h1>
+		<main>
+			{% if page.hero %}
+				<h1 class="hero" style="background-image: url({{ page.hero | relative_url }})">
+					{% if page.logo %}
+						<img src="{{ page.logo | relative_url }}">
+					{% endif %}
+					<span>{{ page.title }}</span>
+				</h1>
+			{% else %}
+				<h1>{{ page.title }}</h1>
+			{% endif %}
+
 			<section>{{ content }}</section>
-		</article>
+		</main>
 
 		{% include footer.html %}
 		{% include header.html %}
