--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,6 +1,62 @@
 <ul class="team">
 	<li>
-		<img src="{{ 'assets/team/rvda.jpg' | relative_url }}">
+		<img src="{{ 'assets/team/gkunst.png' | relative_url }}">
+		<h3>Gerben Kunst</h3>
+		<p>
+			CTO
+			<br>
+			<a href="mailto:gjkunst@kjerner.com">
+				<img src="{{ 'assets/icons/mail.svg' | relative_url }}" alt="Mail icon" height="23">
+			</a>
+			<a href="https://www.linkedin.com/in/gerbenkunst/">
+				<img src="{{ 'assets/icons/linkedin.svg' | relative_url }}" alt="LinkedIn logo" height="23">
+			</a>
+		</p>
+	</li>
+	<li>
+		<img src="{{ 'assets/team/jwnboekesteijn.jpg' | relative_url }}">
+		<h3>Joost-Wim Boekesteijn</h3>
+		<p>
+			Software Engineer
+			<br>
+			<a href="mailto:rvanderarend@kjerner.com">
+				<img src="{{ 'assets/icons/mail.svg' | relative_url }}" alt="Mail icon" height="23">
+			</a>
+			<a href="https://www.linkedin.com/in/jboekesteijn/">
+				<img src="{{ 'assets/icons/linkedin.svg' | relative_url }}" alt="LinkedIn logo" height="23">
+			</a>
+		</p>
+	</li>
+	<li>
+		<img src="{{ 'assets/team/pvandam.jpg' | relative_url }}">
+		<h3>Paul van Dam</h3>
+		<p>
+			Software engineer
+			<br>
+			<a href="mailto:pvandam@kjerner.com">
+				<img src="{{ 'assets/icons/mail.svg' | relative_url }}" alt="Mail icon" height="23">
+			</a>
+			<a href="https://www.linkedin.com/in/pvdam/">
+				<img src="{{ 'assets/icons/linkedin.svg' | relative_url }}" alt="LinkedIn logo" height="23">
+			</a>
+		</p>
+	</li>
+	<li>
+		<img src="{{ 'assets/team/edegroot.jpg' | relative_url }}">
+		<h3>Elgar de Groot</h3>
+		<p>
+			Software Engineer
+			<br>
+			<a href="mailto:edegroot@kjerner.com">
+				<img src="{{ 'assets/icons/mail.svg' | relative_url }}" alt="Mail icon" height="23">
+			</a>
+			<a href="https://www.linkedin.com/in/elgar-de-groot/">
+				<img src="{{ 'assets/icons/linkedin.svg' | relative_url }}" alt="LinkedIn logo" height="23">
+			</a>
+		</p>
+	</li>
+	<li>
+		<img src="{{ 'assets/team/rvanderarend.jpg' | relative_url }}">
 		<h3>Rick van der Arend</h3>
 		<p>
 			Founding Partner
@@ -8,46 +64,24 @@
 			<a href="mailto:rvanderarend@kjerner.com">
 				<img src="{{ 'assets/icons/mail.svg' | relative_url }}" alt="Mail icon" height="23">
 			</a>
-			<a href="https://www.linkedin.com/company/kjerner/">
+			<a href="https://www.linkedin.com/in/rickvanderarend/">
 				<img src="{{ 'assets/icons/linkedin.svg' | relative_url }}" alt="LinkedIn logo" height="23">
 			</a>
 		</p>
-	</li>
+	</li>	
+	
 	<li>
-		<img src="{{ 'assets/team/jw.jpg' | relative_url }}">
-		<h3>Joost-Wim Boekesteijn</h3>
-		<p>
-			Engineer
-			<br>
-			<a href="https://www.linkedin.com/company/kjerner/">
-				<img src="{{ 'assets/icons/linkedin.svg' | relative_url }}" alt="LinkedIn logo" height="23">
-			</a>
-		</p>
-	</li>
-	<li>
-		<img src="{{ 'assets/team/rvda.jpg' | relative_url }}">
-		<h3>Rick van der Arend</h3>
+		<img src="{{ 'assets/team/rvaneekelen.jpg' | relative_url }}">
+		<h3>Ronald van Eekelen</h3>
 		<p>
 			Founding Partner
 			<br>
-			<a href="mailto:rvanderarend@kjerner.com">
+			<a href="mailto:rvaneekelen@kjerner.com">
 				<img src="{{ 'assets/icons/mail.svg' | relative_url }}" alt="Mail icon" height="23">
 			</a>
-			<a href="https://www.linkedin.com/company/kjerner/">
+			<a href="https://www.linkedin.com/in/ronaldvaneekelen/">
 				<img src="{{ 'assets/icons/linkedin.svg' | relative_url }}" alt="LinkedIn logo" height="23">
 			</a>
 		</p>
 	</li>
-	<li>
-		<img src="{{ 'assets/team/jw.jpg' | relative_url }}">
-		<h3>Joost-Wim Boekesteijn</h3>
-		<p>
-			Engineer
-			<br>
-			<a href="https://www.linkedin.com/company/kjerner/">
-				<img src="{{ 'assets/icons/linkedin.svg' | relative_url }}" alt="LinkedIn logo" height="23">
-			</a>
-		</p>
-	</li>
-
 </ul>
