fix mail address, update photo, remove old photo

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -19,7 +19,7 @@
 		<p>
 			Software Engineer
 			<br>
-			<a href="mailto:rvanderarend@kjerner.com">
+			<a href="mailto:jboekesteijn@kjerner.com">
 				<img src="{{ 'assets/icons/mail.svg' | relative_url }}" alt="Mail icon" height="23">
 			</a>
 			<a href="https://www.linkedin.com/in/jboekesteijn/">
@@ -68,8 +68,8 @@
 				<img src="{{ 'assets/icons/linkedin.svg' | relative_url }}" alt="LinkedIn logo" height="23">
 			</a>
 		</p>
-	</li>	
-	
+	</li>
+
 	<li>
 		<img src="{{ 'assets/team/rvaneekelen.jpg' | relative_url }}">
 		<h3>Ronald van Eekelen</h3>
