ensure heads aren't deformed/stretched
team images are assumed to be square: if they're not, it has some
unflattering consequences

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,6 +1,6 @@
 <ul class="team">
 	<li>
-		<img src="{{ 'assets/team/gkunst.png' | relative_url }}">
+		<img src="{{ 'assets/team/gkunst.jpg' | relative_url }}">
 		<h3>Gerben Kunst</h3>
 		<p>
 			CTO
